--- a/BulkyWeb/appsettings.json
+++ b/BulkyWeb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-QS9FF5C\\SQLEXPRESS;Database=Bulky;Trusted_Connection=True;"
+    "DefaultConnection": "Server=DESKTOP-QS9FF5C\\SQLEXPRESS;Database=Bulky;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
